# linkedlist

./: .gitignore  CMakeLists.txt  README.md
include/: linkedlist.h  node.h
lib/: liblinkedlist.dylib
src/: CMakeLists.txt  addNode.c  clearAllNode.c  countNode.c  createNode.c  printNode.c  removeLasteNodeWithValue.c  sort.c  swap.c
